--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Description Meta Tag -->
+    <meta
+      name="description"
+      content="Abolaji Ade-Ajayi is a full stack developer with six years of experience in HTML5, CSS, JavaScript, TypeScript, React JS, React Native, Node JS, MongoDB, MySQL, and MSSQL."
+    />
+
     <title>Abolaji Ade-Ajayi | Full stack developer</title>
   </head>
   <body>
